# FileProcessor

./: .gitignore  CMakeLists.txt  README.md
app/: main.cpp
examples/: grouped_input.txt  input.txt  raw_input.txt
include/: MainWindow.hpp  Object.hpp  ObjectInfo.hpp  ObjectListParser.hpp  RelativeDistance.hpp  RelativeTime.hpp  WorldObject.hpp
src/: MainWindow.cpp  Object.cpp  ObjectInfo.cpp  ObjectListParser.cpp  RelativeDistance.cpp  RelativeTime.cpp  WorldObject.cpp
ui/: MainWindow.ui
